--- a/src/components/Accordion/accordion.module.scss
+++ b/src/components/Accordion/accordion.module.scss
@@ -1,14 +1,18 @@
 @import 'utils/breakpoints';
 
 .accordion {
-  width: 750px;
+  width: 37.5rem;
   background-color: var(--white);
   color: var(--black);
   border-radius: 20px;
-  padding: 28px;
+  padding: 1.75rem;
 
-  @include media('<=tablet') {
-    width: 350px;
+  @include media('<tablet') {
+    width: 22rem;
+  }
+
+  @include media('<420px') {
+    width: 100%;
   }
 
   h3 {
@@ -22,9 +26,10 @@
       color: var(--black);
       border: none;
       background: transparent;
+      cursor: pointer;
 
       @include media('<=phone') {
-        font-size: 16px;
+        font-size: 1rem;
       }
 
       span {
@@ -36,10 +41,10 @@
   }
 
   section {
-    color: var(--gray);
+    color: var(--gray-50);
     font-size: 1rem;
     font-weight: 500;
     font-family: var(--generalSans);
-    padding-block: 10px;
+    padding-block: 0.625rem;
   }
 }
