fixed accordion expansion ☘️

--- a/src/styles/pages/_test.scss
+++ b/src/styles/pages/_test.scss
@@ -1,9 +1,9 @@
 .main {
   padding: 10px;
   min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
   background-color: var(--pastel-green);
 
   .test {
