--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -1,12 +1,14 @@
 :root {
   --max-width: 1100px;
-
   // COLORS
   --pastel-green: #ccf6c5;
   --white: #ffffff;
   --black: #1e1e1e;
   --gray-10: #e6e6e6;
+  --gray-40: #9a9a9a;
   --gray-50: #808080;
+  --gray-60: #666666;
+  --gray-90: #1c1c1c;
 }
 
 // @media (prefers-color-scheme: dark) {
@@ -20,14 +22,21 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
+html {
+  box-sizing: border-box;
   overflow-x: hidden;
+  overscroll-behavior: none;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
+@media (min-width: 1920px) {
+  html {
+    font-size: calc(100vw / 1920 * 10);
+  }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
   background: white;
 }
 
