--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -9,6 +9,7 @@
   --gray-50: #808080;
   --gray-60: #666666;
   --gray-90: #1c1c1c;
+  --gray-100: #1e1e1e;
 }
 
 // @media (prefers-color-scheme: dark) {
