--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -8,6 +8,7 @@
   --gray-40: #9a9a9a;
   --gray-50: #808080;
   --gray-60: #666666;
+  --gray-80: #333333;
   --gray-90: #1c1c1c;
   --gray-100: #1e1e1e;
 }
