--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -2,6 +2,7 @@
   --max-width: 1100px;
   // COLORS
   --pastel-green: #ccf6c5;
+  --pastel-yellow: #ffe7a5;
   --white: #ffffff;
   --black: #1e1e1e;
   --gray-10: #e6e6e6;
