--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -12,6 +12,8 @@
   --gray-80: #333333;
   --gray-90: #1c1c1c;
   --gray-100: #1e1e1e;
+
+  --dv-blue: #c3ecf6;
 }
 
 // @media (prefers-color-scheme: dark) {
