--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -11,8 +11,10 @@
   font-size: 1rem;
   font-family: var(--generalSans);
   font-weight: 600;
-  min-width: 270px;
+  // min-width: -moz-fit-content;
+  // min-width: fit-content;
   width: 100%;
+  min-width: -webkit-fill-available;
   padding: 1.5rem;
 }
 
