--- a/src/components/home/ticket-details/purchase.module.scss
+++ b/src/components/home/ticket-details/purchase.module.scss
@@ -13,9 +13,7 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    // padding: 0 20px;
     padding: 5.6rem 1.5rem;
-    // min-height: 100vh;
 
     @include media('<=tablet') {
       padding: 0 14px;
@@ -51,7 +49,7 @@
         width: 60%;
         height: 100%;
         aspect-ratio: 939.5/444.17;
-        // border: 2px solid black;
+        border: 2px solid black;
 
         @include media('<=tablet') {
           width: 100%;
