--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -1,6 +1,7 @@
 :root {
   --max-width: 1100px;
   // COLORS
+  --cream: #fffaeb;
   --pastel-green: #ccf6c5;
   --pastel-yellow: #ffe7a5;
   --white: #ffffff;
@@ -30,7 +31,7 @@
 html {
   box-sizing: border-box;
   overflow-x: hidden;
-  overscroll-behavior: none;
+  // overscroll-behavior: none;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
