landing page and accordion adjustments

--- a/src/components/accordion/accordion.module.scss
+++ b/src/components/accordion/accordion.module.scss
@@ -1,7 +1,7 @@
 @import 'utils/breakpoints';
 
 .accordion {
-  max-width: 46rem;
+  width: 46rem;
   background-color: var(--white);
   color: var(--black);
   border-radius: 20px;
