--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -8,13 +8,9 @@
   align-items: center;
   background-color: var(--white);
   border-radius: 16px;
-  font-size: 1rem;
-  font-weight: 500;
-  font-family: var(--generalSans);
   padding: 1.5rem;
 
   @include media('<tablet') {
-    font-size: 0.75rem;
     gap: 20px;
     width: 100%;
   }
@@ -24,5 +20,19 @@
     display: flex;
     align-items: center;
     gap: 2px;
+
+    button {
+      border: inherit;
+      background-color: transparent;
+      color: inherit;
+      font-size: 1rem;
+      font-weight: 500;
+      font-family: var(--generalSans);
+      cursor: pointer;
+
+      @include media('<tablet') {
+        font-size: 0.75rem;
+      }
+    }
   }
 }
