--- a/src/components/home/ticket-details/purchase.module.scss
+++ b/src/components/home/ticket-details/purchase.module.scss
@@ -49,7 +49,7 @@
         width: 60%;
         height: 100%;
         aspect-ratio: 939.5/444.17;
-        border: 2px solid black;
+        // border: 2px solid black;
 
         @include media('<=tablet') {
           width: 100%;
