--- a/src/components/home/ticket-details/purchase.module.scss
+++ b/src/components/home/ticket-details/purchase.module.scss
@@ -16,28 +16,41 @@
     padding: 5.6rem 1.5rem;
 
     @include media('<=tablet') {
-      padding: 0 14px;
+      padding: 3.75rem 1.5rem;
     }
 
     .heading {
       text-align: center;
       margin-bottom: 6rem;
 
+      @include media('<=tablet') {
+        margin-bottom: 2rem;
+      }
+
       h1 {
         font-family: 'Geist', sans-serif;
         font-size: 3.5rem;
         font-weight: 600;
         margin-bottom: 0.5rem;
+        color: var(--gray-90);
+
+        @include media('<=tablet') {
+          font-size: 2rem;
+          font-weight: 500;
+        }
       }
 
       p {
         font-size: 1.125rem;
+        @include media('<=tablet') {
+          font-size: 1rem;
+        }
       }
     }
 
-    .ticketdetails {
+    .ticketcontent {
       display: flex;
-      justify-content: space-between;
+      gap: 1rem;
       align-items: center;
 
       @include media('<=tablet') {
@@ -49,15 +62,46 @@
         width: 60%;
         height: 100%;
         aspect-ratio: 939.5/444.17;
-        // border: 2px solid black;
 
         @include media('<=tablet') {
           width: 100%;
           display: block;
+          margin-bottom: 2rem;
+        }
+      }
+
+      .ticketdetails {
+        h2 {
+          font-size: 1.5rem;
+          margin-bottom: 0.5rem;
+          font-weight: 600;
+
+          @include media('<=tablet') {
+            font-size: 1.375rem;
+            font-weight: 500;
+          }
+
+          span {
+            font-size: 1.125rem;
+            font-weight: 400;
+          }
         }
 
-        img {
-          box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
+        ul {
+          padding-inline: 0.8rem;
+          font-size: 1.125rem;
+
+          @include media('<=tablet') {
+            font-size: 1rem;
+            padding-inline: 0px;
+          }
+        }
+
+        button {
+          margin-top: 3rem;
+          @include media('<=625px') {
+            width: 100%;
+          }
         }
       }
     }
