purchase section tweaks

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -13,6 +13,10 @@
   font-weight: 600;
   max-width: 100%;
   padding: 1.5rem;
+
+  @include media('<=tablet') {
+    width: 100%;
+  }
 }
 
 .primary {
