--- a/src/components/home/ticket-details/purchase.module.scss
+++ b/src/components/home/ticket-details/purchase.module.scss
@@ -2,6 +2,7 @@
 
 .purchase {
   width: 100%;
+  // height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,7 +22,7 @@
 
     .heading {
       text-align: center;
-      margin-bottom: 6rem;
+      margin-bottom: 4rem;
 
       @include media('<=tablet') {
         margin-bottom: 2rem;
@@ -57,11 +58,10 @@
         display: block;
       }
 
-      .ticketImage {
-        position: relative;
+      .imagewrapper {
         width: 60%;
-        height: 100%;
-        aspect-ratio: 939.5/444.17;
+        // border: 2px solid black;
+        position: relative;
 
         @include media('<=tablet') {
           width: 100%;
@@ -70,7 +70,20 @@
         }
       }
 
+      .ticketimage {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 939.5/444.17;
+      }
+
       .ticketdetails {
+        @include media('<=tablet') {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+        }
+
         h2 {
           font-size: 1.5rem;
           margin-bottom: 0.5rem;
@@ -88,12 +101,16 @@
         }
 
         ul {
-          padding-inline: 0.8rem;
+          padding-left: 0;
           font-size: 1.125rem;
 
           @include media('<=tablet') {
             font-size: 1rem;
-            padding-inline: 0px;
+            padding-left: 0px;
+          }
+
+          li {
+            padding-left: 0.8rem;
           }
         }
 
