--- a/src/components/home/ticket-details/purchase.module.scss
+++ b/src/components/home/ticket-details/purchase.module.scss
@@ -10,6 +10,10 @@
   color: var(--black);
   font-family: var(--generalSans);
 
+  @include media('<=tablet') {
+    height: 100%;
+  }
+
   .container {
     width: 100%;
     max-width: 1200px;
