feedback-based fixes and tweaks

--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -55,6 +55,11 @@ a {
   text-decoration: none;
 }
 
+button,
+a {
+  cursor: pointer;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
