--- a/src/components/home/faq/faq.module.scss
+++ b/src/components/home/faq/faq.module.scss
@@ -2,7 +2,7 @@
 
 .faq {
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,7 +15,6 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 5.6rem 1.5rem;
-    // border: 2px solid black;
 
     .qa {
       font-size: 1.125rem;
