--- a/src/components/home/landing-section/landing.module.scss
+++ b/src/components/home/landing-section/landing.module.scss
@@ -23,6 +23,9 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 4rem 1rem 0px;
 
     @include media('<=tablet') {
@@ -37,12 +40,11 @@
     .herocontent {
       @include flex-centered;
       flex-direction: column;
-      padding-block: 7rem 2rem;
-      // padding-inline: 1.25rem;
+      margin-bottom: 6rem;
       text-align: center;
-      // border: 2px solid black;
 
       @include media('<=tablet') {
+        margin-bottom: 0rem;
         padding-block: 2.5rem 0rem;
       }
 
@@ -64,7 +66,7 @@
 
         @include media('<=tablet') {
           font-size: 2.5rem;
-          padding-inline: 3.5rem;
+          // padding-inline: 3.5rem;
         }
       }
     }
@@ -77,7 +79,7 @@
 
     .ticketWrapper {
       bottom: 0 !important;
-      height: 500px;
+      height: 300px;
 
       .ticket {
         width: 60%;
@@ -94,12 +96,6 @@
         bottom: -51%;
         right: 49%;
         transform: rotate(63.67deg);
-        // border: 2px solid black;
-
-        // @include media('<=625px') {
-        //   bottom: -5vh;
-        //   right: 50vh;
-        // }
       }
 
       .two {
