--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -12,7 +12,7 @@
   font-family: var(--generalSans);
   font-weight: 600;
   max-width: 100%;
-  padding: 1.5rem;
+  padding: 1.5rem 3.5rem;
 
   @include media('<=tablet') {
     width: 100%;
