--- a/src/components/carousel/carousel-item/carousel-item.module.scss
+++ b/src/components/carousel/carousel-item/carousel-item.module.scss
@@ -1,3 +1,5 @@
+@import 'utils/breakpoints';
+
 .carouselItemContainer {
   text-align: center;
   font-size: 18px;
@@ -5,6 +7,7 @@
   height: 100%;
   max-width: 600px;
   margin: auto;
+  // border: 2px solid black;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -18,6 +21,9 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  // width: 100%;
+  // height: 100%;
+  // aspect-ratio: 400/400;
 
   .carouselItemImage {
     width: 400px;
@@ -30,8 +36,18 @@
 
 .carouselItemActive {
   .carouselItemImage {
-    width: 400px;
+    width: 500px;
     height: 600px;
     object-fit: cover;
+
+    @include media('<=tablet') {
+      width: 300px;
+      height: 450px;
+    }
+
+    @include media('<=phone') {
+      width: 100px;
+      height: 200px;
+    }
   }
 }
