--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -1,5 +1,7 @@
 :root {
-  --max-width: 1100px;
+  --max-width: 1200px;
+
+  --font-geist-sans: var(--geist-sans);
   // COLORS
   --cream: #fffaeb;
   --pastel-green: #ccf6c5;
@@ -44,6 +46,15 @@ html {
 
 body {
   background: white;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  // font-family: var(--geist-sans);
 }
 
 ul {
