--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,7 +1,7 @@
 @import 'utils/breakpoints';
 
 .footerwrapper {
-  background-color: var(--dv-blue);
+  background-color: var(--pastel-blue);
   padding: 9rem 0 4rem;
   color: var(--gray-90);
   font-weight: 200;
