--- a/src/components/home/landing-section/landing.module.scss
+++ b/src/components/home/landing-section/landing.module.scss
@@ -35,6 +35,23 @@
     .headernav {
       width: 100%;
       @include flex-centered;
+
+      .upgradeTicketText {
+        display: flex;
+        align-items: end;
+        animation: upgradeTicket 1000ms cubic-bezier(0.48, 0, 0, 1) 417ms forwards;
+      }
+
+      // Rework this animation implementation
+
+      @keyframes upgradeTicket {
+        0% {
+          height: 200px;
+        }
+        100% {
+          height: 20px;
+        }
+      }
     }
 
     .uppercursors {
