--- a/src/components/home/value/value.module.scss
+++ b/src/components/home/value/value.module.scss
@@ -16,189 +16,191 @@
     background-image: none;
   }
 
-  .topContent {
-    width: 50%;
-    margin: 0 auto 4rem;
+  .container {
+    .topContent {
+      width: 50%;
+      margin: 0 auto 4rem;
 
-    .heading {
-      color: var(--gray-90);
-      font-size: 3.875rem;
-      font-weight: 700;
-      line-height: 77px;
-      text-align: center;
+      .heading {
+        color: var(--gray-90);
+        font-size: 3.875rem;
+        font-weight: 700;
+        line-height: 77px;
+        text-align: center;
 
-      @include media('<=tablet') {
-        font-size: 2rem;
-        line-height: 40px;
-        font-weight: 500;
+        @include media('<=tablet') {
+          font-size: 2rem;
+          line-height: 40px;
+          font-weight: 500;
+        }
+      }
+
+      .paragraph {
+        color: var(--gray-100);
+        font-family: var(--generalSans);
+        font-size: 1.125rem;
+        font-weight: 400;
+        line-height: 24px;
+        text-align: center;
+
+        @include media('<=tablet') {
+          font-size: 1rem;
+        }
       }
     }
 
-    .paragraph {
-      color: var(--gray-100);
-      font-family: var(--generalSans);
-      font-size: 1.125rem;
-      font-weight: 400;
-      line-height: 24px;
-      text-align: center;
+    .details {
+      margin: 0 auto;
+      display: block;
+      width: 400px;
+      margin-top: 1.5rem;
 
-      @include media('<=tablet') {
-        font-size: 1rem;
+      @include media('<=500px') {
+        width: 300px;
+      }
+
+      h2 {
+        font-family: var(--generalSans);
+        font-weight: 600;
+        font-size: 1.375rem;
+        line-height: 32px;
+      }
+
+      p {
+        font-family: var(--generalSans);
+        line-height: 24px;
+        margin-top: 1rem;
       }
     }
-  }
 
-  #carousel {
-    position: relative;
-    height: 700px;
-    top: 50%;
-    overflow: hidden;
+    #carousel {
+      position: relative;
+      height: 500px;
+      top: 50%;
+      overflow: hidden;
 
-    @include media('<=500px') {
-      height: 600px;
-    }
+      @include media('<=500px') {
+        height: 400px;
+      }
 
-    & > div {
-      position: absolute;
-      transition:
-        transform 1s,
-        left 1s,
-        opacity 1s,
-        z-index 0s;
-      opacity: 1;
-      cursor: pointer;
-      border-radius: 12px;
-      -webkit-tap-highlight-color: transparent;
-      -moz-tap-highlight-color: transparent;
-      // -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-
-      img {
-        width: 400px;
-        transition: width 1s;
+      & > div {
+        position: absolute;
+        transition:
+          transform 1s,
+          left 1s,
+          opacity 1s,
+          z-index 0s;
+        opacity: 1;
+        cursor: pointer;
         border-radius: 12px;
-        filter: grayscale(100%);
-
-        @include media('<=500px') {
-          width: 300px;
-        }
-      }
-
-      .details {
-        display: none;
-      }
-
-      &.hideLeft {
-        left: 0%;
-        opacity: 0;
-        transform: translateY(50%) translateX(-50%);
+        -webkit-tap-highlight-color: transparent;
+        -moz-tap-highlight-color: transparent;
 
         img {
-          width: 200px;
-
-          @include media('<=500px') {
-            width: 100px;
-          }
-        }
-      }
-
-      &.hideRight {
-        left: 100%;
-        opacity: 0;
-        transform: translateY(50%) translateX(-50%);
-
-        img {
-          width: 200px;
-          @include media('<=500px') {
-            width: 100px;
-          }
-        }
-      }
-
-      &.prev {
-        z-index: 5;
-        left: 30%;
-        transform: translateY(50px) translateX(-50%);
-
-        img {
-          width: 300px;
-          @include media('<=500px') {
-            width: 200px;
-          }
-        }
-      }
-
-      &.prevLeftSecond {
-        z-index: 4;
-        left: 15%;
-        transform: translateY(50%) translateX(-50%);
-        opacity: 0.7;
-
-        img {
-          width: 200px;
-          @include media('<=500px') {
-            width: 100px;
-          }
-        }
-      }
-
-      &.selected {
-        height: 700px;
-        z-index: 10;
-        left: 50%;
-        transform: translateY(0px) translateX(-50%);
-
-        img {
-          filter: none;
-        }
-
-        .details {
-          display: block;
           width: 400px;
-          margin-top: 1.5rem;
+          transition: width 1s;
+          border-radius: 12px;
+          filter: grayscale(100%);
 
           @include media('<=500px') {
             width: 300px;
           }
-
-          h2 {
-            font-family: var(--generalSans);
-            font-weight: 600;
-            font-size: 1.375rem;
-            line-height: 32px;
-          }
-
-          p {
-            font-family: var(--generalSans);
-            line-height: 24px;
-            margin-top: 1rem;
-          }
         }
-      }
 
-      &.next {
-        z-index: 5;
-        left: 70%;
-        transform: translateY(50px) translateX(-50%);
+        .details {
+          display: none;
+        }
 
-        img {
-          width: 300px;
-          @include media('<=500px') {
+        &.hideLeft {
+          left: 0%;
+          opacity: 0;
+          transform: translateY(50%) translateX(-50%);
+
+          img {
             width: 200px;
+
+            @include media('<=500px') {
+              width: 100px;
+            }
           }
         }
-      }
 
-      &.nextRightSecond {
-        z-index: 4;
-        left: 85%;
-        transform: translateY(50%) translateX(-50%);
-        opacity: 0.7;
+        &.hideRight {
+          left: 100%;
+          opacity: 0;
+          transform: translateY(50%) translateX(-50%);
 
-        img {
-          width: 200px;
+          img {
+            width: 200px;
+            @include media('<=500px') {
+              width: 100px;
+            }
+          }
+        }
 
-          @include media('<=500px') {
-            width: 100px;
+        &.prev {
+          z-index: 5;
+          left: 30%;
+          transform: translateY(50px) translateX(-50%);
+
+          img {
+            width: 300px;
+            @include media('<=500px') {
+              width: 200px;
+            }
+          }
+        }
+
+        &.prevLeftSecond {
+          z-index: 4;
+          left: 15%;
+          transform: translateY(50%) translateX(-50%);
+          opacity: 0.7;
+
+          img {
+            width: 200px;
+            @include media('<=500px') {
+              width: 100px;
+            }
+          }
+        }
+
+        &.selected {
+          height: 400px;
+          z-index: 10;
+          left: 50%;
+          transform: translateY(0px) translateX(-50%);
+
+          img {
+            filter: none;
+          }
+        }
+
+        &.next {
+          z-index: 5;
+          left: 70%;
+          transform: translateY(50px) translateX(-50%);
+
+          img {
+            width: 300px;
+            @include media('<=500px') {
+              width: 200px;
+            }
+          }
+        }
+
+        &.nextRightSecond {
+          z-index: 4;
+          left: 85%;
+          transform: translateY(50%) translateX(-50%);
+          opacity: 0.7;
+
+          img {
+            width: 200px;
+
+            @include media('<=500px') {
+              width: 100px;
+            }
           }
         }
       }
