login implementation setup

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 @import 'core/typography';
 @import 'core/variables';
 
-@import 'pages/test';
+@import 'pages/login';
 @import 'pages/landing-page';
 
 @import 'components/sample-button';
