--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -5,6 +5,8 @@
   --cream: #fffaeb;
   --pastel-green: #ccf6c5;
   --pastel-yellow: #ffe7a5;
+  --pastel-blue: #c3ecf6;
+  --primary-blue: #4285f4;
   --white: #ffffff;
   --black: #1e1e1e;
   --gray-10: #e6e6e6;
@@ -14,7 +16,6 @@
   --gray-80: #333333;
   --gray-90: #1c1c1c;
   --gray-100: #1e1e1e;
-  --pastel-blue: #c3ecf6;
 }
 
 * {
