--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -1,8 +1,130 @@
-.test {
-  min-height: 100vh;
+@import 'utils/breakpoints';
+@import 'utils/mixins';
+
+.login {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  font-family: var(--generalSans);
   background-color: var(--pastel-green);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 20px;
+  background-image: url('/auth-bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  @include media('<=500px') {
+    background-color: var(--white);
+    background-image: none;
+  }
+
+  .backdrop {
+    width: 100%;
+    height: 100vh;
+    padding: 4rem;
+    -webkit-backdrop-filter: blur(5px);
+    -moz-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+
+    @include media('<=500px') {
+      padding: 1rem;
+    }
+  }
+
+  .container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    max-width: 1200px;
+    margin: 0 auto;
+
+    header {
+      margin: 0 auto;
+    }
+
+    .login__card {
+      max-width: 500px;
+      padding: 2.5rem 2.25rem;
+      background-color: var(--white);
+      border-radius: 8px;
+      margin: 7rem auto;
+
+      @include media('<=500px') {
+        padding: 0px;
+        margin: 0 auto;
+      }
+
+      .login__title {
+        font-size: 1.5rem;
+        font-weight: 600;
+        text-align: center;
+        margin-bottom: 0.5rem;
+      }
+
+      .login__subtitle {
+        font-size: 1rem;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 1.5rem;
+      }
+
+      .error {
+        font-size: 1rem;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 1.5rem;
+        color: red;
+      }
+
+      .login__item {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        margin-bottom: 1.5rem;
+
+        label {
+          display: flex;
+          gap: 5px;
+          font-weight: 500;
+
+          span:nth-child(2) {
+            color: var(--gray-60);
+          }
+        }
+
+        input {
+          width: 100%;
+          font-size: 1rem;
+          font-family: inherit;
+          font-weight: 500;
+          border: 0.5px solid var(--gray-60);
+          border-radius: 8px;
+          padding: 1rem 0.625rem;
+        }
+
+        .extra {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          color: var(--primary-blue);
+          font-size: 0.875rem;
+          font-weight: 500;
+
+          div {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+          }
+
+          .right {
+            margin-left: auto;
+          }
+        }
+      }
+
+      button {
+        width: 100%;
+        margin-top: 2.25rem;
+      }
+    }
+  }
 }
