--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -39,6 +39,9 @@
 
     header {
       margin: 0 auto;
+      @include media('<=500px') {
+        padding: 1.5rem 0rem;
+      }
     }
 
     .login__card {
@@ -73,52 +76,6 @@
         text-align: center;
         margin-bottom: 1.5rem;
         color: red;
-      }
-
-      .login__item {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        margin-bottom: 1.5rem;
-
-        label {
-          display: flex;
-          gap: 5px;
-          font-weight: 500;
-
-          span:nth-child(2) {
-            color: var(--gray-60);
-          }
-        }
-
-        input {
-          width: 100%;
-          font-size: 1rem;
-          font-family: inherit;
-          font-weight: 500;
-          border: 0.5px solid var(--gray-60);
-          border-radius: 8px;
-          padding: 1rem 0.625rem;
-        }
-
-        .extra {
-          width: 100%;
-          display: flex;
-          justify-content: space-between;
-          color: var(--primary-blue);
-          font-size: 0.875rem;
-          font-weight: 500;
-
-          div {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-          }
-
-          .right {
-            margin-left: auto;
-          }
-        }
       }
 
       button {
