color and layout fixes

--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -7,6 +7,7 @@
   --pastel-yellow: #ffe7a5;
   --pastel-blue: #c3ecf6;
   --primary-blue: #4285f4;
+  --secondary-red: #f28b82;
   --white: #ffffff;
   --black: #1e1e1e;
   --gray-10: #e6e6e6;
