--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -61,6 +61,10 @@
         font-weight: 600;
         text-align: center;
         margin-bottom: 0.5rem;
+
+        @include media('<=500px') {
+          text-align: left;
+        }
       }
 
       .login__subtitle {
@@ -68,6 +72,11 @@
         font-weight: 500;
         text-align: center;
         margin-bottom: 1.5rem;
+
+        @include media('<=500px') {
+          text-align: left;
+          font-weight: 400;
+        }
       }
 
       .error {
@@ -75,7 +84,7 @@
         font-weight: 500;
         text-align: center;
         margin-bottom: 1.5rem;
-        color: red;
+        color: var(--secondary-red);
       }
 
       button {
