ticket details and upgrade Ui in progress

--- a/src/styles/core/_globals.scss
+++ b/src/styles/core/_globals.scss
@@ -11,6 +11,7 @@
   --white: #ffffff;
   --black: #1e1e1e;
   --gray-10: #e6e6e6;
+  --gray-30: #b3b3b3;
   --gray-40: #9a9a9a;
   --gray-50: #808080;
   --gray-60: #666666;
