--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -9,6 +9,7 @@
   background-color: var(--white);
   border-radius: 16px;
   padding: 1.5rem;
+  margin: 0 auto;
 
   @include media('<tablet') {
     padding: 1.5rem 1rem;
