--- a/src/components/home/landing-section/landing.module.scss
+++ b/src/components/home/landing-section/landing.module.scss
@@ -37,31 +37,61 @@
       @include flex-centered;
     }
 
-    .uppercursors {
-      svg:nth-child(1) {
+    .careercursor {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+
+      .careercursortext {
+        padding: 0.5em 1em;
+        border-radius: 8px;
+        font-size: 12px;
+        font-weight: 500;
+        text-align: center;
+      }
+
+      &--productmanager {
         position: absolute;
         top: 19%;
         left: 8%;
+
+        .careercursortext {
+          color: #f9ab00;
+          background-color: #fde293;
+        }
       }
 
-      svg:nth-child(2) {
+      &--productdesigner {
         position: absolute;
         top: 21%;
         right: 8%;
-      }
-    }
 
-    .lowercursors {
-      svg:nth-child(1) {
+        .careercursortext {
+          color: #ea4335;
+          background-color: #f8d8d8;
+        }
+      }
+
+      &--softwareengineer {
         position: absolute;
         bottom: 40%;
         left: 8%;
+
+        .careercursortext {
+          color: #34a853;
+          background-color: rgba(137, 240, 6, 0.12);
+        }
       }
 
-      svg:nth-child(2) {
+      &--dataanalyst {
         position: absolute;
         bottom: 38%;
         right: 8%;
+
+        .careercursortext {
+          color: #4285f4;
+          background-color: #c3ecf6;
+        }
       }
     }
 
@@ -76,24 +106,59 @@
         padding-block: 2.5rem 0rem;
       }
 
-      p {
-        font-family: var(--generalSans);
-        font-size: 1.375rem;
+      .landingPageCtaParagraph {
         margin-bottom: 1rem;
 
         @include media('<=tablet') {
-          font-size: 1rem;
           margin-bottom: none;
+        }
+
+        p {
+          font-family: var(--generalSans);
+          font-size: 1.375rem;
+
+          @include media('<=tablet') {
+            font-size: 1rem;
+          }
         }
       }
 
-      h1 {
-        font-size: 3.875rem;
-        font-size: 700;
+      .landingPageCtaHeader {
         margin-bottom: 1rem;
 
+        h1 {
+          font-size: 3.875rem;
+          font-weight: 700;
+
+          @include media('<=tablet') {
+            font-size: 2.5rem;
+          }
+        }
+      }
+
+      .landingPageCtaButton {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 3px;
+        border: inherit;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 1rem;
+        font-family: var(--generalSans);
+        font-weight: 600;
+        max-width: 100%;
+        padding: 1.5rem 3.5rem;
+        background: var(--black);
+        color: var(--white);
+        scale: 0;
+
+        .landingPageCtaButtonText {
+          display: inline-block;
+        }
+
         @include media('<=tablet') {
-          font-size: 2.5rem;
+          width: 100%;
         }
       }
     }
@@ -114,32 +179,41 @@
 
       .one {
         position: absolute;
-        bottom: -51%;
-        right: 49%;
-        transform: rotate(63.67deg);
-      }
+        bottom: -90%;
+        right: 30%;
+        transform: rotate(90deg);
 
-      .two {
-        position: absolute;
-        bottom: -51%;
-        left: 49%;
-        transform: rotate(120deg);
-
-        @include media('<=625px') {
-          bottom: -50%;
-          left: 50%;
+        .ticketImage {
+          width: 85% !important;
         }
       }
 
       .middle {
         position: absolute;
-        bottom: -38%;
+        bottom: -100%;
         left: 19%;
-        transform: rotate(90deg);
         z-index: 10;
+        transform: rotate(90deg);
 
         @include media('<=625px') {
           left: 10%;
+        }
+
+        .ticketImage {
+          width: 95% !important;
+        }
+      }
+
+      .two {
+        position: absolute;
+        bottom: -90%;
+        left: 30%;
+        z-index: 2;
+        transform: rotate(90deg);
+
+        @include media('<=625px') {
+          bottom: -50%;
+          left: 50%;
         }
       }
     }
