Claim Tickets UI implementation and Select component functionality

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import 'pages/login';
 @import 'pages/landing-page';
 @import 'pages/ticket-details';
+@import 'pages/claim-ticket';
 
 @import 'components/sample-button';
 
