--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -38,3 +38,9 @@
   color: var(--black);
   border: 2px solid var(--black);
 }
+
+.disabled {
+  background: var(--gray-10);
+  color: var(--gray-40);
+  cursor: not-allowed;
+}
