--- a/src/styles/pages/_claim-ticket.scss
+++ b/src/styles/pages/_claim-ticket.scss
@@ -13,9 +13,20 @@
     width: 100%;
     height: 100vh;
     max-width: 1200px;
+    margin: 0 auto;
 
     .claim__tickets__content {
+      width: 100%;
       margin: 1.5rem;
+      padding-block: 1.5rem;
+      display: flex;
+      gap: 2.5rem;
+
+      @include media('<=1024px') {
+        margin: 0 auto;
+        gap: 1.5rem;
+      }
+
       @include media('<=tablet') {
         margin: 0.5rem;
       }
@@ -26,23 +37,27 @@
         }
       }
 
-      .claim__tickets__heading {
-        margin-bottom: 2.5rem;
-        h1 {
-          font-weight: 500;
-          margin-bottom: 0.5rem;
+      .claim__tickets__form {
+        width: 100%;
+        // padding-block: 3rem;
+        .claim__tickets__heading {
+          margin-bottom: 2.5rem;
+          h1 {
+            font-weight: 500;
+            margin-bottom: 0.5rem;
+          }
+
+          p {
+            font-family: var(--generalSans);
+          }
         }
 
-        p {
+        .registration__form {
+          display: flex;
+          flex-direction: column;
+          gap: 2rem;
           font-family: var(--generalSans);
         }
-      }
-
-      .registration__form {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        font-family: var(--generalSans);
       }
     }
   }
