--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -11,7 +11,7 @@
   padding: 1.5rem;
   margin: 0 auto;
 
-  @include media('<tablet') {
+  @include media('<=tablet') {
     padding: 1.5rem 1rem;
     gap: 50px;
     width: 100%;
