--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   z-index: 100;
+  height: 100%;
 }
 
 .modal_container {
@@ -20,6 +21,7 @@
   position: relative;
   width: 100%;
   top: 2rem;
+  height: 90vh;
 }
 
 .modal-close-button {
@@ -33,7 +35,8 @@
 }
 
 .modal_content {
-  // margin-top: 20px;
+  height: 88vh;
+  // overflow-y: auto;
 }
 
 // width
