--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -1,3 +1,5 @@
+@import 'utils/breakpoints';
+
 .modal_overlay {
   position: fixed;
   top: 0;
@@ -17,6 +19,7 @@
   // border-radius: 8px;
   position: relative;
   width: 100%;
+  top: 2rem;
 }
 
 .modal-close-button {
@@ -35,21 +38,21 @@
 
 // width
 .w_md {
-  max-width: 600px;
+  max-width: 90%;
+
+  @include media('>=desktop') {
+    max-width: 600px;
+  }
 }
 
 .w_full {
   max-width: 95%;
 
-  @media (min-width: 768px) {
-    max-width: 600px;
+  @include media('>=tablet') {
+    max-width: 90%;
   }
 
-  @media (min-width: 992px) {
-    max-width: 800px;
-  }
-
-  @media (min-width: 1200px) {
-    max-width: 1000px;
+  @include media('>=desktop') {
+    max-width: 950px;
   }
 }
