--- a/src/components/purchase-ticket/components/checkout/checkout.module.scss
+++ b/src/components/purchase-ticket/components/checkout/checkout.module.scss
@@ -1,3 +1,5 @@
+@import 'utils/breakpoints';
+
 .main_container {
   background-color: #fffaeb;
   border: 2px solid #b3b3b3;
@@ -51,7 +53,7 @@
     }
   }
 
-  @media (max-width: 992px) {
+  @include media('<=tablet') {
     border: 1.3px solid #b3b3b3;
     border-radius: 10.38px;
 
