implemented the use of images from cloudinary.

--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   font-family: var(--generalSans);
   background-color: var(--pastel-green);
-  background-image: url('/auth-bg.png');
+  background-image: url('https://res.cloudinary.com/defsbafq2/image/upload/v1723023968/auth-bg_p42bqb.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
