updated px font size to rem

--- a/src/components/purchase-ticket/components/checkout/checkout.module.scss
+++ b/src/components/purchase-ticket/components/checkout/checkout.module.scss
@@ -11,7 +11,7 @@
     border-bottom: 1px solid #b3b3b3;
     padding: 26px 16px;
     color: #1e1e1e;
-    font-size: 28px;
+    font-size: 1.75rem;
     font-weight: 500;
   }
 
@@ -68,14 +68,14 @@
     &_header {
       border-bottom: 0.65px solid #b3b3b3;
       padding: 16px 10px;
-      font-size: 18px;
+      font-size: 1.15rem;
     }
 
     &_body {
       padding: 16px 10px;
 
       &_date {
-        font-size: 12px;
+        font-size: 0.75rem;
         margin-bottom: 6.5px;
       }
 
