--- a/src/components/purchase-ticket/components/checkout/checkout.module.scss
+++ b/src/components/purchase-ticket/components/checkout/checkout.module.scss
@@ -36,13 +36,6 @@
       gap: 1rem;
       margin-bottom: 1rem;
 
-      > li:nth-child(2),
-      li:first-child {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-      }
-
       &_item {
         padding-bottom: 1rem;
         display: flex;
@@ -51,6 +44,13 @@
         font-size: 18px;
         font-weight: 500;
         color: #808080;
+
+        &_one,
+        &_two {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+        }
 
         span:first-child {
           color: #1c1c1c;
